footer pas fini sorry..

--- a/index.html
+++ b/index.html
@@ -102,14 +102,22 @@
                 </div>
             </div>
             <div class="alignementTitre">
-                <div><img src="./youcommunik/public/img/site-single-page.png" alt="Site single page"></div>
+                <div><img src="./youcommunik/public/img/site-vitrine.png" alt="Site vitrine"></div>
                 <div class="pCenter">
-                    <p>Site single page</p>
+                    <p>Site vitrine</p>
                 </div>
             </div>
             <div class="alignementTitre">
-                <div><img src="./youcommunik/public/img/carte-visite.png" alt="Carte de visite"></div>
+                <div><img src="./youcommunik/public/img/reseaux-sociaux.png" alt=" Icon Reseaux sociaux"></div>
                 <div class="pCenter">
+                    <p>Reseaux sociaux</p>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="divSolo">
+                <div><img src="./youcommunik/public/img/carte-visite.png" alt="Icon Carte de visite"></div>
+                <div class="pCenter1">
                     <p>Carte de visite</p>
                 </div>
             </div>
